Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ button:hover {
 	align-items: center;
 }
 
-.space3 {
+.spacebutton {
 	display: flex;
 	height: 20px;
 }
